plugins {
    id "io.micronaut.build.internal.docs"
    id "io.micronaut.build.internal.quality-reporting"
    id "io.micronaut.build.internal.data-dependencies"
}

repositories {
    mavenCentral()
    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
}

micronautBuild {
    sourceCompatibility = "11"
}

if (System.getenv("SONAR_TOKEN") != null) {
    sonarqube {
        properties {
            property "sonar.exclusions", "**/example/**"
        }
    }
}
